--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -224,9 +224,9 @@ Hamilton wördet esen as eynen van de beste reagenryders in den sport en summige
 Eyrder in syne karriere wyr Hamilton bekritisered vöär sums wuudend too wean, so as doo hy ediskwalificered wyr in Imola in den GP2 vöär et inhålen van den safety car, wat hy veer jår låter sül herhålen in de Formule Eyn in den europäesken Grouten Prys van 2010 in Valencia. Skonwal hevt Hamilton låter in syne karriere meyr vulwassenheyd etöyned, terwyl hy syne genadelousheyd en agressy beholdeden. Hy verdealeden de meningen van et püblik en vöärmålige koureurs in de låtste race van et seisoon van 2016, wår hy an de leiding teagen de teamorders inging döär Nico Rosberg too vertrågen en too dwingen in de achtervölgende gruup üm by öäre rivålen uut too lokken dat sy synen teammåten in gingen hålen, wat hem in ståt had estelled üm et werldkampioonskap too winnen.
 
 === Untvangst ===
-Hamilton wördet våke esen as den besten koureurs van syne generatsy en algemeyn beskowed as eynen van den gröytsten Formule Eynkoureurs in de geskydenis van den sport. Våke wördet hy beskowed by den gröytsten britsken koureurs in de Formule Eyn, Hamilton is den meyst süksesvullen, want hy hevt meyr raceoaverwinningen dan eynig anderen britsken koureur in de geskydenis van de Formule Eyn en vyv oaverwinningen in den britsken Grouten Prys net as Jim Clark en Alain Prost. Syne lükse leavensstyl en interessen buuten de Formule Eyn bünt bekritisered, skonwal hebbet lüde uut den sport so as Emerson Fittipaldi en Christian Horner öäre steun egeaven vöär Hamiltons vermogen üm kontakt too måken med de fans. Bernie Ecclestone hevt reagelm tigBereagered med syne bewundering van et vermogen van Hamilton üm den sport too promoten med synen leavensstyl, upmarkend hoo hy blyde is üm med fans üm too gån anders as sümmige van syne kollegas. Sinds Hamiltons eyrste seisoon in 2007, hevt den jårliksken werldwyden upbrengst van de Formule Eyn tooenömmen med 53% når $1,83&nbsp;miljard up 31 jüly 2016.
+Hamilton wördet våke esen as den besten koureurs van syne generatsy en algemeyn beskowed as eynen van den gröytsten Formule Eynkoureurs in de geskydenis van den sport. Våke wördet hy beskowed by den gröytsten britsken koureurs in de Formule Eyn, Hamilton is den meyst süksesvullen, want hy hevt meyr raceoaverwinningen dan eynig anderen britsken koureur in de geskydenis van de Formule Eyn en vyv oaverwinningen in den britsken Grouten Prys net as Jim Clark en Alain Prost. Syne lükse leavensstyl en interessen buuten de Formule Eyn bünt bekritisered, skonwal hebbet lüde uut den sport so as Emerson Fittipaldi en Christian Horner öäre steun egeaven vöär Hamiltons vermogen üm kontakt too måken med de fans. Bernie Ecclestone hevt reagelmåtig ereagered med syne bewundering van et vermogen van Hamilton üm den sport too promoten med synen leavensstyl, upmarkend hoo hy blyde is üm med fans üm too gån anders as sümmige van syne kollegas. Sinds Hamiltons eyrste seisoon in 2007, hevt den jårliksken werldwyden upbrengst van de Formule Eyn tooenömmen med 53% når $1,83&nbsp;miljard up 31 jüly 2016.
 
-Al nen grout talent as nen tyner, hevt Hamilton sichselv neaderesettet as eynen van de beste koureurs van de werld nå syn rekordbrekkenden debutjår wår hy gelykkwam med synen teammåt, den tweymåligen werldkampioon Fernando Alonso en wyr tweyden in et kampioonskap med mår eyn pünt achterstand. Nå syne eyrste werldtitel in 2008 beskoweden vele lüde Hamilton as den besten koureur van syne generatsy. Nå nen veer jor lange dlminantsy van Red Bull en Sebastian Vettel in den sport in de vulgende veer jreon, wyr slwal professioneel en persoonlik etested ümdat hy neet höyger as de veerde plåtse in et individüellen kampioonskap, wat dertoo leideden dat summigen synen status as den besten koureur in den sport gingen betwyvelen. 
+Al nen grout talent as nen tyner, hevt Hamilton sichselv neaderesettet as eynen van de beste koureurs van de werld nå syn rekordbrekkenden debutjår wår hy gelykkwam med synen teammåt, den tweymåligen werldkampioon Fernando Alonso en wyr tweyden in et kampioonskap med mår eyn pünt achterstand. Nå syne eyrste werldtitel in 2008 beskoweden vele lüde Hamilton as den besten koureur van syne generatsy. Nå nen veer jår lange dominantsy van Red Bull en Sebastian Vettel in den sport in de vulgende veer jåren, wyr hy sowal professioneel en persoonlik etested ümdat hy neet höyger as de veerde plåtse in et individüellen kampioonskap, wat dertoo leideden dat summigen synen status as den besten koureur in den sport gingen betwyvelen. 
 
 Dree jår låter nådat hy syne tweyde en darde werldtitel had behåled med Mercedes up ne dominante wyse vöär jöygdvrind en teammft Nico Rosberg verklareden David Coulthard Hamilton den besten koureur van syne generatsy en nuumeden hem <nowiki>''den Ayrton Senna van synen tyd''</nowiki>. Disse mening wyr uutendelik breyder eakseptered by et püblik, de eksperts, medekoureurs en vöärmålige koureurs. Syne minder süksesvulle jåren by McLaren bünt ok ecitered as nen vöärbeyld van syne ryvermogen ümdat Hamilton ten minsten eyne race hevt ewönnen per seisoon in twålv seisoonen up nen ry en kreg groute lov van ervåren koureurs vöär et behålen van winnende prestatsys uut wågen dy neet dominant waren. Terwyl et sükses van Hamilton wyderging, wårby hy de meyste eyrste startpositsys allertyden en et up eyn nå gröytsten antal raceoaverwinningen, as ok syne veerde werldtitel, ging et debat van et püblik en de eksperts oaver van synen status in de moderne Formule Eyn in nen debat over synen status tüsken de gröytste koureurs in de geskydenis.
 
