--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -33,9 +33,9 @@ Hamilton ging oaver når de regerende Euro Series kampionen ASM vöär et seisoo
 === Seisoon van 2006: GP2 ===
 Vanweagen syn sukses in de Formule Dree ging hy vöär 2006 oaver når ASMs süsterteam ART Grand Prix in den GP2 . Net as öär süsterteam in de F3 waren ART de leiders van et veld en regerende kampionen ümdat sy in 2005 den GP2-kroun behåld hadden med Nico Rosberg. Hamilton wön et GP2-kampioonskap by syne eyrste poging, wårby hy Nelson Piquet Jr. en Timo Glock versloog.
 
-Under Hamiltons prestatsys was ouk ne dominante oaverwinning op de Nürburgringe, ündanks nen strav vöär versnellen in de pitstråte. Tydens syne thuusrace up Silverstone, as understötting vöär den britsken Grand Prix, haleden Hamilton twey rivalen in by Becketts, ne serie buchten up houge snelheyd (töt 150 myl per üre (240 km per üre in nen GP2-wågen) wår inhålen seldsåm is. In Istanbul herstellen hy van nen drai den hem når de achttynde plåtse terügwörpen döär de tweyde positsy te pakken in de låtste buchten. Hamilton wön de titel under üngewöäne umstandigheyden, wårby hy et låtsten punt dat hy nöydig had kreg nådat Giorgio Pantano syne snelste runde in den Monza demonstratsywedstryd afenömmen wyr. In de sprintrace, skonwal hy tweyds endigen en Piquet sesdes, stönd hy 12 punten lös van syn rivål.
+Under Hamiltons prestatsys was ouk ne dominante oaverwinning op de Nürburgringe, ündanks nen strav vöär versnellen in de pitstråte. Tydens syne thuusrace up Silverstone, as understötting vöär den britsken Grand Prix, haleden Hamilton twey rivalen in by Becketts, ne serie buchten up houge snelheyd (töt 150 myl per üre (240 km per üre in nen GP2-wågen) wår inhålen seldsåm is. In Istanbul herstellen hy van nen drai den hem når de achttynde plåtse terügwörpen döär de tweyde positsy te pakken in de låtste buchten. Hamilton wön de titel under üngewöäne umstandigheyden, wårby hy et låtsten punt dat hy nöydig had kreg nådat Giorgio Pantano syne snelste runde in den Monza demonstratsywedstryd avenömmen wyr. In de sprintrace, skonwal hy tweyds endigen en Piquet sesdes, stünd hy 12 punten lös van synen rivål.
 
-Syn GP2-kampioonskap kwam tegelyk med ne leyge plåtse by McLaren nå et vertrek van Juan Pablo Montoya når NASCAR en van Kimi Räikkönen når Ferrari. Nå månden van spekulåtsy oaver ov Hamilton, Pedro de la Rosa ov Gary Paffett vöär 2007 nevven den verdeydigend kampioon Fernando Alonso plåtse möcht nemmen, wyr Hamilton bevestigd as tweyden koureur van et team. Hem wyr an et ende van september vertelled van McLarens besluut, mår et niuws wyr noch bynå twey månden neet bekend emåked uut angst dat et oaverskadüwd wyr döär de ankondiging van Michael Schumachers pensioon.
+Syn GP2-kampioonskap kwam tegelyk med ne leyge plåtse by McLaren nå et vertrek van Juan Pablo Montoya når NASCAR en van Kimi Räikkönen når Ferrari. Nå månden van spekulåtsy oaver ov Hamilton, Pedro de la Rosa ov Gary Paffett vöär 2007 nevven den verdeydigenden kampioon Fernando Alonso plåtse möcht nemmen, wyr Hamilton bevestigd as tweyden koureur van et team. Hem wyr an et ende van september vertelled van McLarens besluut, mår et niuws wyr noch bynå twey månden neet bekend emåked uut angst dat et oaverskadüwd wyr döär de ankondiging van Michael Schumachers pensioon.
 
 == Formule Eynkarriere ==
 
@@ -55,7 +55,7 @@ Hamilton wön den hongaarsken Grand Prix vanvav eyrste positsy nå ne twyvelacht
 
 In den brasiliaansken Grand Prix endigen Hamilton seavendes en wön Räikkönen, wat beteakenden dat Hamilton tweyds wyr in et kampioonskap med eyn pünt verskil. In de eyrste runde wyr Hamilton vöärbyereden döär meyrdere wågens en vyl terüg når de achtste plåtse; acht runden låter kön hy neet skakelen når ne versnelling en blev 40 sekonden stån. Hy herstelleden sich når de seavende plåtse mår  Ferrari had öär twey koureurs ümewisseld sodat Räikkönen vöär et kampioonskap kön gån. Hamilton pakkeden et rekord van des werlds jüngeste individuele tweyde plåtse in et kampioonskap, med 22 jåren en 287 dågen, dårvöär sinds 1960 in handen van Bruce McLaren med 23 jåren en 5 dågen; et rekord van Hamilton is undertüsken verbrökken döär Sebastian Vettel in 2009.
 
-In oktober begön de FIA nen undersuuk når BMW Sauber en Williams vöär brandstovsjuumel; de BMWkoureurs waren vyvdes en sesdes geendigd en as sy uut den uutslag ehåled wyren, wårdöär Hamilton når de vyvde plåtse epromoveerd wördet, wön hy et werldkampioonskap med eyn pünt vöär Räikkönen. Uutendelik wyren beide teams neet estravd; McLaren ging in höyger beroop. Hamilton vertelleden de BBC vervölgens dat hy de F1-titel neet winnen wül döär de kwalifikatsys van andere koureurs.
+In oktober begön de FIA nen undersuuk når BMW Sauber en Williams vöär brandstovsjuumel; de BMWkoureurs waren vyvdes en sesdes geendigd en as sy uut den uutslag ehåled wyren, wårdöär Hamilton når de vyvde plåtse epromoveerd wördet, wön hy et werldkampioonskap med eyn pünt vöär Räikkönen. Uutendelik wyren beide teams neet estravd; McLaren ging in höyger beroop. Hamilton vertelleden de BBC vervölgens dat hy de F1-titel neet winnen wül döär de diskwalifikatsys van andere koureurs.
 [[Bestaand:Podium_2007_USGP.jpg|duum|Hamilton up de höygste podiumplåtse nådat hy den Grouten Prys van de Vereynigde Ståten van 2007 had ewönnen. Nevven hem ståt teammåt Fernando Alonso (links) en Felipe Massa (rechts).]]
 
 ===== Spanningen in et team =====
