*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -1694,3 +1694,5 @@ De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty
 {{Bron|<references/>}}
 
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
+
+[[Kategorie:Laand]]
