*Empty MediaWiki Message*

--- a/Amelaands.mw
+++ b/Amelaands.mw
@@ -113,7 +113,7 @@ Hoewel de [[geleuf]]sskeiding tegenwoordig amper nog n rolle speult, is der onde
 * Terpstra, Pieter, ''Tweeduizend jaar geschiedenis van Friesland'', Liwwarden, zonder jaor (Uutgeveri'je M.Th. van Seyen), zonder ISBN.
 }}
 {{SNLV}}
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Nederlaanse streektael en dialekt]]
 [[Kategorie:Streektaol in Frieslaand]]
