*Empty MediaWiki Message*

--- a/De_Friese_Meren.mw
+++ b/De_Friese_Meren.mw
@@ -130,6 +130,6 @@ Naost de offisiële plakken liggen de volgende [[buurtschop|buurtskoppen]] in de
 | NW=[[Zuudwest-Frieslaand]]
 }}
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Gemiente in Frieslaand]]
