*Empty MediaWiki Message*

--- a/Tim_Douwsma.mw
+++ b/Tim_Douwsma.mw
@@ -55,7 +55,7 @@ t Ston ien weke op plak 95 in de Single Top 100. Op 6 desember 2012 wordde beken
 {{Commonscat|Tim Douwsma}}
 * [http://www.timdouwsma.com/ Offisiële webstee]
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 {{DEFAULTSORT:Douwsma, Tim}}
 [[Kategorie:Nederlaandse zanger]]
