*Empty MediaWiki Message*

--- a/Encyklopedie.mw
+++ b/Encyklopedie.mw
@@ -20,6 +20,6 @@ De ordening in rubrieken is baseerd op een wetenskopssystematiek die weeromgaot 
 * Vakgroep Boek-, Bibliotheek- en Informatiewetenschap (Universiteit van Amsterdam): [http://cf.hum.uva.nl/nhl/Giraf/encyclopedieen.htm Encyclopedieën]: Overzicht van encyklopedieën in et Nederlaands, Duuts, Fraans en Engels.
 * Leerstoelgroep Boekwetenschap en handschriftenkunde (Universiteit van Amsterdam): [http://cf.hum.uva.nl/nhl/bizon/encyclopedieen.htm Encyclopedieën]: Overzicht van verskillende encyklopedieën.
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Literatuur]]
