*Empty MediaWiki Message*

--- a/Goesharders.mw
+++ b/Goesharders.mw
@@ -5,6 +5,6 @@ t Goesharders is onder te verdielen in t Noord-, Middel- en Zuud-Goesharders, n 
 
 t Goesharders leit an de zuudgreens van t Noordfriese taelgebied en daordeur is t dialektverlies daor groot. t Zuud-Goesharders is in 1981 uutsturven, van t Middel-Goesharders wordt zegd dat t akuut mit uutstarven bedreigd wordt. t Noord-Goesharders left nog wel; in Langenhorn worden der kursussen Fries geven. Ok aandere plakken hebben hiemkundekringen die him mit t Fries bezighoolden; zels [[Schobüll]] in de Zuud-Goesharde, waor t Fries al uutsturven is. t [[Nordfriisk Instituut]] is huusvest op 'e greens van de Noord- en Middel-Goesharde, in [[Bredstedt]].
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Freesk]]
