--- a/Oosterskellings.mw
+++ b/Oosterskellings.mw
@@ -39,7 +39,7 @@ Ok de spelling wiekt nogal of van t Standerdfries. An t aende van woorden wordt 
 }}
 
 {{SNLV}}
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Freesk]]
 [[Kategorie:Streektaol in Frieslaand]]
