*Empty MediaWiki Message*

--- a/Noord-Germaanse_taelen.mw
+++ b/Noord-Germaanse_taelen.mw
@@ -193,6 +193,6 @@ De'' -s-''vörm in de verleden tied wordt in t Zweeds ok vaeke veur zaeken bruuk
 <references/>
 
 {{Germoans}}
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Germaanse taol]]
