*Empty MediaWiki Message*

--- a/Klompenmaker.mw
+++ b/Klompenmaker.mw
@@ -33,5 +33,5 @@ Ofbeelding:klomp04.jpg|Endprodukt
 *[http://www.youtube.com/watch?v=Hsitd8kz65Q Video op YouTube over mit haand maken van klompn in Aenter]
 *Artikel over de [[kloomp|klomp]]
 
-{{Dialekt|sdz||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz||Algemene Nedersaksiese Schriefwieze}}
 [[Kategorie:Olde ambachten]]
