--- a/Karrharders.mw
+++ b/Karrharders.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Kartenordfriesischedialekte.GIF|thumb|De Noordfriese dialekten]]
 t '''Karrharders''' is n [[Noordfrais|Noordfries]] dialekt dat in de gemienten [[Stedezaand]] en [[Eng-De Zaand]] (''Ding-Sönj'') in [[Amt Karrharde]] spreuken wordt. t Karrharders wordt op t vaastelaand van [[Noordfraislaand|Noordfrieslaand]] spreuken, mar wordt slim mit uutstarven bedreigd. In Karrharde wordt ok nog [[Platduuts]] en [[Sønderjysk]] (n Deens dialekt) spreuken.
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Freesk]]
