*Empty MediaWiki Message*

--- a/Wiedingharders.mw
+++ b/Wiedingharders.mw
@@ -5,6 +5,6 @@ t Wiedingharders vormt tegere mit t [[Mooring]], t [[Karrharders]], t [[Goeshard
 
 De hiemkundige verieniging van [[Niekarken]] ([[Duuts]]: ''Neukirchen'', [[Noordfries]]: ''Naischöspel'') organiseert kursussen Wiedingharders.
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Freesk]]
