*Empty MediaWiki Message*

--- a/Tuterink.mw
+++ b/Tuterink.mw
@@ -42,6 +42,6 @@ t Bruuiseizoen van de tuterink löp van alf april töt in juni. t Bruuien duurt 
 * [http://www.soortenbank.nl/soorten.php?soortengroep=vogels&record=Tringa+totanus SoortenBank.nl - beskrieving, ofbeeldingen en geluud]
 * Waornemingen in [http://waarneming.nl/soort/maps/27 Nederlaand] en [http://observado.org/soort/maps/27 wereldwied] 
 
-{{Dialekt|sdz|Gällemuun|Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Gällemuun|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Voegel]]
