*Empty MediaWiki Message*

--- a/Sölring.mw
+++ b/Sölring.mw
@@ -9,6 +9,6 @@ t Kleine antal sprekers dat nog Sölring praot mag him verheugen in erkenning en
 
 n Bekende Sylter dichter was [[Jens Emil Mungard]] (1885 - 1940), hi'j skreef zien gedichten in t Sölring. Hi'j skreef meer as 700 gedichten, 6 theaterstokken en verskillende proza.
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Freesk]]
