*Empty MediaWiki Message*

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -60,7 +60,7 @@ Exakte siefers over oevule Sallaanders nog dialekt praoten bin niet bekend. t St
 
 {{SNLV}}
 {{Bron|n Diel van dit artikel is ebaseerd op informasie van de [[Limburgs]]e en de [[Nederlaands]]e Wikipedie}}
-{{Dialekt|sdz|Gällemuden|Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Gällemuden|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Sallaands|!]]
 [[Kategorie:Streektaol in Drenthe]]
