*Empty MediaWiki Message*

--- a/Rauwe_melk.mw
+++ b/Rauwe_melk.mw
@@ -13,6 +13,6 @@ In rauwe melk zitten ook kwaolike bakteriën, zo as ''[[Escherichia coli]]'', ''
 ==Nederlaandse regelgeving==
 Rauwe melk mag in [[Nederlaand]] volgens t [[Wärenwetbesluut ygiëne van levensmiddels]] (artikel 8-11) allienig rechtstreeks bi'j de boer ekocht wörren, i'j mut t lös verkopen (dus niet in n flesse of n pak), en i'j mut zien koper dudelik mäken dat de melk tuus veret mut wörren, de vermelding ''RAUWE MELK VOOR GEBRUIK KOKEN'' is verplicht. Toch gebeurt dat niet altied umdat vule boeren veurstaander bin van t drinken van rauwe melk, zo as dat vrogger ook altied gebeurde.
 
-{{Dialekt|sdz|Gällemuden|Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Gällemuden|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Zuvel]]
