*Empty MediaWiki Message*

--- a/Halligers.mw
+++ b/Halligers.mw
@@ -5,6 +5,6 @@ Hoewel dit dialekt inheems is op 'e eilaanden, wordt t niet bi'j t Eilaand-Noord
 
 Deurdat der zo weinig meensken wonen, is dit dialekt in oonze tied in verval raekt. In zoe'n kleine gemienskop zu'j vandaege de dag meerstal n buteling as moet moeten kiezen, waordeur de tael niet deurgeven wordt. Ok bin der deur t lege tal sprekers zwat gien basisleermiddels en skreven teksten. In de bundel van Noordfriese vertaelings van [[Theodor Storm]]s ''Häwelmann'' komt liekewel ok n Halliger vertaeling veur. Op Langeneß en Hooge bin der piepkleine hiemkundeverienigings die him mit t dialekt bezighoolden; kursussen worden der liekewel niet geven. t [[Nordfriisk Instituut]] ziet t Halligers as "akuut mit uutstarven bedreigd".
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Freesk]]
