*Empty MediaWiki Message*

--- a/Helgolaands.mw
+++ b/Helgolaands.mw
@@ -125,6 +125,6 @@ n Aander inisiatief is t saemenstellen van n goed Helgolaander woordeboek. Tot n
 * [http://www.fa.knaw.nl/fa/uitgaven/trefwoord/jaargang-2006/helgolands_handwoordenboek.pdf Over t Helgolaander woordeboek (Nederlaandstaelig)]
 * [http://www.dbnl.org/tekst/wink007alge01/wink007alge01_030.htm n 19e-ieuwse studie naor t Helgolaands (Nederlaandstaelig)]
 
-{{Dialekt|stl||Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Freesk]]
