*Empty MediaWiki Message*

--- a/Amersfoort_(Zuud-Afrika).mw
+++ b/Amersfoort_(Zuud-Afrika).mw
@@ -2,7 +2,7 @@
 
 t Daarp [[eZamokuhle]] leit kortbie Amersfoort en draagt veur n groot deel bie an de ekonomie van Amersfoort.
 
-{{Dialekt|wvel|Bunsjoten|Algemene Nedersaksiese Sjriefwieze}}
+{{Dialekt|wvel|Bunsjoten|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Plaotse in Mpumalanga]]
