*Empty MediaWiki Message*

--- a/Amersfoorts.mw
+++ b/Amersfoorts.mw
@@ -2,7 +2,7 @@ t '''Amersfoorts''' is n [[Eemlangds]] dialekt dat ok wel tot de [[West-Veluws]]
 
 n Paor veurbeelden van Amersfoortse woorden bin ''ouwewijvetene'' of ''[[platte peters]]'' en ''[[grup]]'' veur t Nederlangdse woord ''greppel''.
 
-{{Dialekt|wvel|Bunsjoten|Algemene Nedersaksiese Sjriefwieze}}
+{{Dialekt|wvel|Bunsjoten|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Veluws]]
 [[Kategorie:Streektaol in Utrecht]]
