*Empty MediaWiki Message*

--- a/Stichtse_Vecht.mw
+++ b/Stichtse_Vecht.mw
@@ -54,6 +54,6 @@ Bestaand:Netherlands, Stichtse Vecht, Buurtschap Spengen.JPG|Polderlangdsjap bie
 <references/>
 
 {{Utrecht}}
-{{Dialekt|wvel|Bunsjoten|Algemene Nedersaksiese Sjriefwieze}}
+{{Dialekt|wvel|Bunsjoten|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Gemeente in Utrecht]]
