*Empty MediaWiki Message*

--- a/Utrecht_(provinsie).mw
+++ b/Utrecht_(provinsie).mw
@@ -62,7 +62,7 @@ Overzicht van de Utrechtse gemeenten.
 
 {{Utrecht}}
 {{NederlaandsePrevinsies}}
-{{Dialekt|wvel|Bunsjoten|Algemene Nedersaksiese Sjriefwieze}}
+{{Dialekt|wvel|Bunsjoten|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Utrecht| ]]
