--- a/Utrecht_(stad).mw
+++ b/Utrecht_(stad).mw
@@ -22,7 +22,7 @@ Vanwege de [[Domtoren]], beeldmark van de stad en mit 112,30 meter de hoogste ka
 == Referensies ==
 <references/>
 
-{{Dialekt|wvel|Spaokenburg|Algemene Nedersaksiese Sjriefwieze}}
+{{Dialekt|wvel|Spaokenburg|Algemene Nedersaksiese Schriefwieze}}
 {{Utrecht}}
 
 [[Kategorie:Stad in Nederlaand]]
