*Empty MediaWiki Message*

--- a/Utrechtse_Heuvelrug_(gemeente).mw
+++ b/Utrechtse_Heuvelrug_(gemeente).mw
@@ -71,6 +71,6 @@ Ofbeelding:Starkenburg_ridderhöfstad.jpg|Ridderhofstad Starkenburg
 </gallery>
 
 {{Utrecht}}
-{{Dialekt|wvel|Spaokenburg|Algemene Nedersaksiese Sjriefwieze}}
+{{Dialekt|wvel|Spaokenburg|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Gemeente in Utrecht]]
