*Empty MediaWiki Message*

--- a/Straandlopers.mw
+++ b/Straandlopers.mw
@@ -25,6 +25,6 @@
 ==Referensies==
 <references/>
 
-{{Dialekt|urs|Algemiene Nedersaksiese Skreefweze}}
+{{Dialekt|urs|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Voegel]]
