*Empty MediaWiki Message*

--- a/Noordoostpolder.mw
+++ b/Noordoostpolder.mw
@@ -64,7 +64,7 @@ Antal inwoeners per plaotse op 1 april 2014:
 <small>Bron: gemiente Noordoostpolder</small><br />
 
 {{Flevolaand}}
-{{Dialekt|urs|Algemiene Nedersaksiese Skreefweze}}
+{{Dialekt|urs|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Noordoostpolder| ]]
 [[Kategorie:Streek in Flevolaand]]
