*Empty MediaWiki Message*

--- a/Mieuw.mw
+++ b/Mieuw.mw
@@ -68,6 +68,6 @@ Bestaand:Bulbjerg_rider.jpg|[[Drietienmieuw]]
 == Referinsies ==
 <references/>
 
-{{Dialekt|urs|Algemiene Nedersaksiese Skreefweze}}
+{{Dialekt|urs|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Voegel]]
