*Empty MediaWiki Message*

--- a/Kontinint.mw
+++ b/Kontinint.mw
@@ -19,6 +19,6 @@ Der worren ok [[dubbelkontinint]]en onderskeien zo as Amerika (Noord- in Zuid-Am
 ==Rifferensies==
 <references/>
 
-{{Dialekt|urs|Algemiene Nedersaksiese Skreefweze}}
+{{Dialekt|urs|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Kontinent]]
