*Empty MediaWiki Message*

--- a/Knoet_(voegel).mw
+++ b/Knoet_(voegel).mw
@@ -42,6 +42,6 @@ Knoeten aewen op eurluiers trektochten verskillende diëten. An de Amerikaonse o
 * [http://www.soortenbank.nl/soorten.php?soortengroep=vogels&record=Calidris+canutus SoortenBank.nl - beskreving, ofbieldingen in geleud]
 * Waorniemingen in [http://waarneming.nl/soort/maps/125 Nederlaand], [http://waarnemingen.be/soort/maps/125 België] in [http://observado.org/soort/maps/125 warreldwijd]
 
-{{Dialekt|urs|Algemiene Nedersaksiese Skreefweze}}
+{{Dialekt|urs|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Voegel]]
