*Empty MediaWiki Message*

--- a/Amsterdam.mw
+++ b/Amsterdam.mw
@@ -84,7 +84,7 @@ Amsterdam et [[stedenbaand]]en mit de volgende steden:
 {{Commonscat|Amsterdam}}
 
 {{Noord-Hollaand}}
-{{Dialekt|urs|Algemiene Nedersaksiese Skreefweze}}
+{{Dialekt|urs|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Gemeente in Noord Hollaand]]
 [[Kategorie:Stad in Nederlaand]]
