*Empty MediaWiki Message*

--- a/Andorra.mw
+++ b/Andorra.mw
@@ -44,7 +44,7 @@ Jaorliks wort Andorra bezocht duur zo'n 10,2&nbsp;miljoen minsen. t Geïsolierde
 == Eutgaonde verwezing ==
 {{Commonscat|Andorra}}
 
-{{Dialekt|urs|Algemiene Nedersaksiese Skreefweze}}
+{{Dialekt|urs|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Laand]]
 [[Kategorie:Europa]]
