*Empty MediaWiki Message*

--- a/Ålkraie.mw
+++ b/Ålkraie.mw
@@ -1,4 +1,4 @@
-De '''ålkraie''' (''Phalacrocorax carbo'') is en [[voegel|voagel]] uut de oordening ''Suliformes'', dee sik in 4 subspecies updeylt med en vorspreydingsgebeed van West[[Gruunlaand|gröönland]] un de [[Noord-Amerika|noordamerikaanske]] oustküste öäver [[Eurasien]] bet hen nå [[Australië (laand)|Australien]] un [[Ni'j-Zeelaand|Nyseyland]] to. De twey in [[Afrika|Afrika]] bröden subspecies wardet vandage as en eygen aard [[witbostålkraie]] (''Phalacrocorax lucidus'') teld.<ref>A. Kuus & E. Leibak (2018). ''Linnuatlas : Eesti haudelindude levik ja arvukus''. Tartu: Eesti Ornitoloogiaühing</ref>
+De '''ålkraie''' (''Phalacrocorax carbo'') is en [[voegel|voagel]] uut de oordening ''Suliformes'', dee sik in 3–4 subspecies updeylt med en vorspreydingsgebeed van West[[Gruunlaand|gröönland]] un de [[Noord-Amerika|noordamerikaanske]] oustküste öäver [[Eurasien]] bet hen nå [[Australië (laand)|Australien]] un [[Ni'j-Zeelaand|Nyseyland]] to. De twey in [[Afrika|Afrika]] bröden subspecies wardet vandage as en eygen aard [[witbostålkraie]] (''Phalacrocorax lucidus'') teld.<ref>A. Kuus & E. Leibak (2018). ''Linnuatlas : Eesti haudelindude levik ja arvukus''. Tartu: Eesti Ornitoloogiaühing</ref>
 
 == Name == 
 
@@ -12,6 +12,26 @@ De ålkraie is twüsken 77 un 94 cm grout un het en vlünkenspanwydde van 121–
 
 [[Bestaand:Phalacrorax carbo 2.JPG|thumb|stående|Juvenile ålkraie in winterkleyd.]]
 Juvenile voagels hebbet anders as de adulten voagels en witten buuk.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref>
+
+== Vorspreyding un leavensgebeed ==
+
+De werldwyde populatioon van de ålkraie bedrigt nå skätting 1,4–2,9 miljoon individuen. Van de veer subspecies brödet twey in [[Europa]]: ''sinensis'' un ''carbo'', wårvan in dat jår 2006 de europääske populatioon van ''sinensis'' 232.300 pår un dee van ''carbo'' 52.100 pår bedroog. Dat wardt vormoded, wat de heyle pårantal in Europa meddewyle up 401.000–512.000 anwussen is. Talrykst is de ålkraie in Europa in disse landen:
+* [[Ruslaand|Rusland]]: 65.000–120.000 pår
+* [[Oekraïne|Ukraine]]: 65.000–75.000 pår
+* [[Sveden|Sweden]]: 43.500 pår
+* [[Denmaark|Däänmark]]: 32.850 pår
+* [[Polen]]: 27.100 pår
+* [[Duutslaand|Düütskland]]: 22.000–26.000 pår
+* [[Nederlaand|Nedderlanden]]: 20.500–24.750 pår
+
+De subspecies van de ålkraie vordeylet sik nå de achternåkoamen manere:
+* ''P. c. carbo'': de küstengebeden van den [[Atlantische Ozeoan|Noordatlantik]]
+* ''P. c. sinensis'': van [[Europa (werelddeel)|Kontinentaaleuropa]] bet hen nå [[Azie|Oustasien]] inklusive [[Japan]]
+* ''P. c. novaehollandiae'': [[Australië (laand)|Australien]] un [[Ni'j-Zeelaand|Nyseyland]]<ref>A. Kuus & E. Leibak (2018). ''Linnuatlas : Eesti haudelindude levik ja arvukus''. Tartu: Eesti Ornitoloogiaühing</ref>
+
+Deylwyse wardt de japaanske ålkraie ouk as eygen subspecies ''P. c. hanedae'' teld.<ref>Avibase: [http://avibase.bsc-eoc.org/species.jsp?avibaseid=ACD40E8C3CC720BF ''Phalacrocorax carbo'']</ref>
+
+
 
 ==Referensen==
 <references/>
