*Empty MediaWiki Message*

--- a/Ålkraie.mw
+++ b/Ålkraie.mw
@@ -14,6 +14,12 @@ De ålkraie is twüsken 77 un 94 cm grout un het en vlünkenspanwydde van 121–
 Juvenile voagels hebbet anders as de adulten voagels en witten buuk.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref>
 
 == Vorspreyding un leavensgebeed ==
+[[Bestaand:PhalacrocoraxCarbo.png|thumb|De werldwyde vorspreyding van de ålkraie. Kyk up, wat hyr de afrikaansken subspecies med inteykend sint, dee hüüdtodaags as separate species witbostålkraie ''Phalacrocorax lucidus'' reakend wardet.<br />
+{{Kaortlegenda|#00FF00|Brödend|outline=gray}} 
+{{Kaortlegenda|#008000|Standvoagel|outline=gray}} 
+{{Kaortlegenda|#00FFFF|Trekkend|outline=gray}} 
+{{Kaortlegenda|#007FFF|Wintergebeden|outline=gray}}
+]]
 
 De werldwyde populatioon van de ålkraie bedrigt nå skätting 1,4–2,9 miljoon individuen. Van de veer subspecies brödet twey in [[Europa]]: ''sinensis'' un ''carbo'', wårvan in dat jår 2006 de europääske populatioon van ''sinensis'' 232.300 pår un dee van ''carbo'' 52.100 pår bedroog. Dat wardt vormoded, wat de heyle pårantal in Europa meddewyle up 401.000–512.000 anwussen is. Talrykst is de ålkraie in Europa in disse landen:
 * [[Ruslaand|Rusland]]: 65.000–120.000 pår
