--- a/Ålkraie.mw
+++ b/Ålkraie.mw
@@ -8,10 +8,8 @@ Den [[Nedersaksisch|sassisken]] name "ålkraie", jüst so as den [[Nederlaands|n
 
 [[Bestaand:Cormorant (Phalacrocorax carbo) (14).JPG|thumb|Vöär dat dröygend van syn vedderkleyd breydt de ålkraie ear vlünken up en karakteristske manere uut.]]
 
-De ålkraie is twüsken 77 un 94 cm grout un het en vlünkenspanwydde van 121–149 cm. Döär de lyke grötde un den lyken vlünkenslagrytmus is see in earen vloog en beaten gooshaftig. See het avers en groaver hals, en kraftigen [[sneb|snavel]] un en länger staert.<ref>L. Svensson (2017, andra reviderade upplagan). ''Fågelguiden – Europas och Medelhavsområdets fåglar i fält''. Bonnier Fakta</ref> An dat kin is see wit, man anders sügt dat vedderkleyd swarthaftig uut, uut de naegde meist metalsk blenkeren gröön or blauw. 
-
+De ålkraie is twüsken 77 un 94 cm grout un het en vlünkenspanwydde van 121–149 cm. Döär de lyke grötde un den lyken vlünkenslagrytmus is see in earen vloog en beaten gooshaftig. See het avers en groaver hals, en kraftigen [[sneb|snavel]] un en länger staert.<ref>L. Svensson (2017, andra reviderade upplagan). ''Fågelguiden – Europas och Medelhavsområdets fåglar i fält''. Bonnier Fakta</ref> An dat kin is see wit, man anders sügt dat vedderkleyd swarthaftig uut, uut de naegde meist metalsk blenkeren gröön or blauw. Juvenile voagels hebbet anders as de adulten voagels en witten buuk.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref>
 [[Bestaand:Phalacrorax carbo 2.JPG|thumb|stående|Juvenile ålkraie in winterkleyd.]]
-Juvenile voagels hebbet anders as de adulten voagels en witten buuk.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref>
 
 == Vorspreyding un leavensgebeed ==
 [[Bestaand:PhalacrocoraxCarbo.png|thumb|De werldwyde vorspreyding van de ålkraie. Kyk up, wat hyr de afrikaansken subspecies med inteykend sint, dee hüüdtodaags as separate species witbostålkraie ''Phalacrocorax lucidus'' reakend wardet.<br />
