--- a/Ålkraie.mw
+++ b/Ålkraie.mw
@@ -12,7 +12,7 @@ De ålkraie is twüsken 77 un 94 cm grout un het en vlünkenspanwydde van 121–
 [[Bestaand:Phalacrorax carbo 2.JPG|thumb|stående|Juvenile ålkraie in winterkleyd.]]
 
 == Vorspreyding un leavensgebeed ==
-[[Bestaand:PhalacrocoraxCarbo.png|thumb|De werldwyde vorspreyding van de ålkraie. Kyk up, wat hyr de afrikaansken subspecies med inteykend sint, dee hüüdtodaags as separate species witbostålkraie ''Phalacrocorax lucidus'' reakend wardet.<br />
+[[Bestaand:PhalacrocoraxCarbo.png|mini|400px|De werldwyde vorspreyding van de ålkraie. Kyk up, wat hyr de afrikaansken subspecies med inteykend sint, dee hüüdtodaags as separate species witbostålkraie ''Phalacrocorax lucidus'' reakend wardet.<br />
 {{Kaortlegenda|#00FF00|Brödend|outline=gray}} 
 {{Kaortlegenda|#008000|Standvoagel|outline=gray}} 
 {{Kaortlegenda|#00FFFF|Trekkend|outline=gray}} 
@@ -34,8 +34,6 @@ De subspecies van de ålkraie vordeylet sik nå de achternåkoamen manere:
 * ''P. c. novaehollandiae'': [[Australië (laand)|Australien]] un [[Ni'j-Zeelaand|Nyseyland]]<ref>A. Kuus & E. Leibak (2018). ''Linnuatlas : Eesti haudelindude levik ja arvukus''. Tartu: Eesti Ornitoloogiaühing</ref>
 
 Deylwyse wardt de japaanske ålkraie ouk as eygen subspecies ''P. c. hanedae'' teld.<ref>Avibase: [http://avibase.bsc-eoc.org/species.jsp?avibaseid=ACD40E8C3CC720BF ''Phalacrocorax carbo'']</ref>
-
-
 
 ==Referensen==
 <references/>
