*Empty MediaWiki Message*

--- a/Ålkraie.mw
+++ b/Ålkraie.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Cormorant (Phalacrocorax carbo) (14).JPG|mini|300px|Vöär dat dröygend van syn vedderkleyd breydt de ålkraie ear vlünken up en karakteristske manere uut.]]
+[[Bestaand:Cormorant (Phalacrocorax carbo) (14).JPG|mini|300px|Vöär dat dröygend van ear vedderkleyd breydt de ålkraie ear vlünken up en karakteristske manere uut.]]
 
 De '''ålkraie''' (''Phalacrocorax carbo'') is en [[voegel|voagel]] uut de oordening ''Suliformes'', dee sik in 3–4 subspecies updeylt med en vorspreydingsgebeed van West[[Gruunlaand|gröönland]] un de [[Noord-Amerika|noordamerikaanske]] oustküste öäver [[Eurasien]] bet hen nå [[Australië (laand)|Australien]] un [[Ni'j-Zeelaand|Nyseyland]] to. De twey in [[Afrika|Afrika]] bröden subspecies wardet vandage as en eygen aard [[witbostålkraie]] (''Phalacrocorax lucidus'') teld.<ref>A. Kuus & E. Leibak (2018). ''Linnuatlas : Eesti haudelindude levik ja arvukus''. Tartu: Eesti Ornitoloogiaühing</ref>
 
