--- a/Ålkraie.mw
+++ b/Ålkraie.mw
@@ -8,7 +8,7 @@ Den [[Nedersaksisch|sassisken]] name "ålkraie", jüst so as den [[Nederlaands|n
 
 == Markteykens == 
 
-De ålkraie is twüsken 77 un 94 cm grout un het en vlünkenspanwydde van 121–149 cm. Döär de lyke grötde un den lyken vlünkenslagrytmus is see in earen vloog en beaten gooshaftig. See het avers en groaver hals, en kraftigen [[sneb|snavel]] un en länger staert.<ref>L. Svensson (2017, andra reviderade upplagan). ''Fågelguiden – Europas och Medelhavsområdets fåglar i fält''. Bonnier Fakta</ref> An dat kin is see wit, man anders sügt dat vedderkleyd swarthaftig uut, uut de naegde meist metalsk blenkeren gröön or blauw. Juvenile voagels hebbet anders as de adulten voagels en witten buuk.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref>
+De ålkraie is twüsken 77 un 94 cm grout un het en vlünkenspanwydde van 121–149 cm. Döär de lyke grötde un den lyken vlünkenslagrytmus löt see in earen vloog en beaten gooshaftig. See het avers en groaver hals, en kraftigen [[sneb|snavel]] un en länger staert.<ref>L. Svensson (2017, andra reviderade upplagan). ''Fågelguiden – Europas och Medelhavsområdets fåglar i fält''. Bonnier Fakta</ref> An dat kin is see wit, man anders sügt dat vedderkleyd swarthaftig uut, uut de naegde meist metalsk blenkeren gröön or blauw. Juvenile voagels hebbet anders as de adulten voagels en witten buuk.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref>
 [[Bestaand:Phalacrorax carbo 2.JPG|thumb|stående|Juvenile ålkraie in winterkleyd.]]
 
 == Vorspreyding un leavensgebeed ==
