/* Vorspreyding un leavensgebeed */

--- a/Ålkraie.mw
+++ b/Ålkraie.mw
@@ -19,7 +19,7 @@ De ålkraie is twüsken 77 un 94 cm grout un het en vlünkenspanwydde van 121–
 {{Kaortlegenda|#007FFF|Wintergebeden|outline=gray}}
 ]]
 
-De werldwyde populatioon van de ålkraie bedrigt nå skätting 1,4–2,9 miljoon individuen. Van de veer subspecies brödet twey in [[Europa]]: ''sinensis'' un ''carbo'', wårvan in dat jår 2006 de europääske populatioon van ''sinensis'' 232.300 pår un dee van ''carbo'' 52.100 pår bedroog. Dat wardt vormoded, wat de heyle pårantal in Europa meddewyle up 401.000–512.000 anwussen is. Talrykst is de ålkraie in Europa in disse landen:
+De werldwyde populatioon van de ålkraie bedrigt nå skätting 1,4–2,9 miljoon individuen. Van de subspecies brödet twey in [[Europa]]: ''sinensis'' un ''carbo'', wårvan in dat jår 2006 de europääske populatioon van ''sinensis'' 232.300 pår un dee van ''carbo'' 52.100 pår bedroog. Dat wardt vormoded, wat de heyle pårantal in Europa meddewyle up 401.000–512.000 anwussen is. Talrykst is de ålkraie in Europa in disse landen:
 * [[Ruslaand|Rusland]]: 65.000–120.000 pår
 * [[Oekraïne|Ukraine]]: 65.000–75.000 pår
 * [[Sveden|Sweden]]: 43.500 pår
