--- a/Biswetering.mw
+++ b/Biswetering.mw
@@ -2,7 +2,7 @@
 
 {{Begin|sdz}}
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/34/01|EW=5/59/27|type=city|region=NL-OV}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
