*Empty MediaWiki Message*

--- a/Chili.mw
+++ b/Chili.mw
@@ -63,7 +63,7 @@ n Paor andere pläätsen bint:
 == Uutgaonde verwiezingen ==
 {{commonscat|Chile}}
 {{Wiktionary}}
-{{Dialekt|ovel|[[Attems|Attem]]|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|ovel|[[Attems|Attem]]|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Oost-Veluws artikel]]
 [[Kategorie:Chili]]
