--- a/De_Euvels.mw
+++ b/De_Euvels.mw
@@ -2,7 +2,7 @@
 
 {{Begin|sdz}}
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/30/46|EW=5/53/51|type=city|region=NL-OV}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
