--- a/De_Röskamme.mw
+++ b/De_Röskamme.mw
@@ -2,7 +2,7 @@
 
 {{Begin|sdz}}
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/31/22|EW=5/54/18|type=city|region=NL-OV}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
