*Empty MediaWiki Message*

--- a/De_Zaande.mw
+++ b/De_Zaande.mw
@@ -3,7 +3,7 @@
 {{Begin|sdz}}
 {{Kampen}}
 {{Coordinate|NS=52/30/52|EW=5/57/38|type=city|region=NL-OV}}
-{{Dialekt|sdz|Kamperveen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kamperveen|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Kampen]]
