*Empty MediaWiki Message*

--- a/'s-Eerenbroek.mw
+++ b/'s-Eerenbroek.mw
@@ -11,7 +11,7 @@ Swinters is de eufdattraksie veurnamelik de iesbane.
 
 {{Kampen}}
 {{Coordinate|NS=52/32/7|EW=6/0/53|type=city|region=NL-OV}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 
 {{DEFAULTSORT:Eerenbroek}}
 [[Kategorie:Plaatse in Oaveriessel]]
