*Empty MediaWiki Message*

--- a/Europeeske_Uny.mw
+++ b/Europeeske_Uny.mw
@@ -170,6 +170,6 @@ Andere inheemse talen die in de Europese Unie espröken wörren, maer (nog) niet
 == Uutgaonde verwiezingen ==
 * {{commons|European Union}}
 
-{{Dialekt|sdz|Zwolle|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Zwolle|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Europese Unie]]
