*Empty MediaWiki Message*

--- a/Gietelink.mw
+++ b/Gietelink.mw
@@ -37,6 +37,6 @@ Ofbeelding:Amselkueken.jpg
 ==Uutgaonde verwiezings==
 {{Commons|Turdus merula}}
 
-{{Dialekt|ovel|Attem|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|ovel|Attem|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Voegel]]
