*Empty MediaWiki Message*

--- a/Gorkum.mw
+++ b/Gorkum.mw
@@ -51,7 +51,7 @@ Ofbeelding:Gorinchem_stadswalle.jpg|Stadswal
 </gallery>
 
 {{Zuud-Hollaand}}
-{{Dialekt|act||Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|act||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Gemeente in Zuud-Hollaand]]
 [[Kategorie:Plaotse in Zuud Hollaand]]
