*Empty MediaWiki Message*

--- a/Ni'jstad.mw
+++ b/Ni'jstad.mw
@@ -2,7 +2,7 @@
 
 {{Begin|sdz}}
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/32/07|EW=5/57/53|type=city|region=NL-OV}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
