*Empty MediaWiki Message*

--- a/Mastenbroek.mw
+++ b/Mastenbroek.mw
@@ -5,7 +5,7 @@ De gemeente Zwolle bouwt in n deel van disse polder de Vinexlokasie [[Stadsaegen
 
 De polder bestiet veur n groot deel uut klei op veengronden, dät wil zeggen dät der n dun [[klei]]dek ligt op n dikkere laoge [[vene (grondsoorte)|veen]]. Bi'j [[Iesselmuden]] ligt n rivierdune. In t midden van de polder ligt rond n kärke n ge-ucht, dät ook de name Mastenbroek ef.
 
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Geografie van de Kop van Overiessel]]
