*Empty MediaWiki Message*

--- a/Litouwen.mw
+++ b/Litouwen.mw
@@ -90,7 +90,7 @@ Litouwen is verdield in tien distrikten, die vernuumd bint naor der eigen eufdst
 ==Uutgaonde verwiezing==
 {{commonscat|Lithuania}}
 
-{{Dialekt|ovel|Attem|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|ovel|Attem|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Laand]]
 [[Kategorie:Europa]]
