*Empty MediaWiki Message*

--- a/Kroepdeers.mw
+++ b/Kroepdeers.mw
@@ -9,7 +9,7 @@ Kroepdeers wordt meesttieds op de volgende wieze indeeld.
 * [[Krokodillen]] (''Crocodilia'')
 * [[Brugaewerdasken]](''Sphenodontidae'')
 
-{{Dialekt|twd|West-Twaente|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|twd|West-Twaente|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Dier]]
