*Empty MediaWiki Message*

--- a/Koekien_(internet).mw
+++ b/Koekien_(internet).mw
@@ -7,6 +7,6 @@ Koekies kunnen bruukt worden veur:
 * t verkriegen van internetgedrag
 * t koppelen van n webkieker an tiedelike variabelen op de server (sessiekoekien)
 
-{{Dialekt|stl||Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Internet]]
