*Empty MediaWiki Message*

--- a/Kampervene.mw
+++ b/Kampervene.mw
@@ -5,7 +5,7 @@ Kamperveen ef drie buurtskappen: [[De Zaande]], [[Zuudeinde]] en [[Ogeweg]]. Dis
 
 {{Coordinate|NS=52/30/29/N|EW=5/55/50/E|type=city|region=NL-OV}}
 {{Kampen}}
-{{Dialekt|sdz|Kamperveen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kamperveen|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Sallaands artikel]]
 [[Kategorie:Kampen]]
