--- a/Kampereilaand.mw
+++ b/Kampereilaand.mw
@@ -14,7 +14,7 @@ t Kampereilaand van now nemp n ampärte plaatse in in t [[Nasionaal Laandskap Ie
 <references/>
 
 {{Kampen}}
-{{Dialekt|sdz|Kampereilaand|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampereilaand|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/35/7|EW=5/53/50|type=landmark|region=NL-OV}}
 
 [[Kategorie:Nederlaands eilaand]]
