*Empty MediaWiki Message*

--- a/Graffest.mw
+++ b/Graffest.mw
@@ -16,7 +16,7 @@ Tradisioneel wördt in Graffest sinds 1333 in oktober de ''biestemärkt'' e-olde
 [[Bestaand:Grafhorst1.jpg|thumb|left|700px|Zicht op Graffest vanuut t zuudwesten ezien]]<br clear="all">
 
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/34/57|EW=5/56/2|type=city|region=NL-OV}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
