--- a/Ogeweg.mw
+++ b/Ogeweg.mw
@@ -2,7 +2,7 @@
 
 {{Begin|sdz}}
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/31/06|EW=5/54/54|type=city|region=NL-OV}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
