*Empty MediaWiki Message*

--- a/Oosterolt.mw
+++ b/Oosterolt.mw
@@ -7,7 +7,7 @@ De buurtskap is tussen 500 en 1500 nao [[Jezus Christus|Christus]] ebouwd. Toen 
 Oosterolt bestiet uut de volgende straoten: Oosteroltseweg (''Oosterholtseweg''), Sonnenbärgweg, Oosteroltsestege (''Oosterholtsesteeg''), Oosterlandenweg, Veilingweg, Zwolseweg (Kampen tot 's-Eerenbroek), Kamperweterink (''Kamperwetering'') en Bössiesstege (''Bosjessteeg'').
 
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/33/32|EW=5/57/14|type=city|region=NL-OV}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
