*Empty MediaWiki Message*

--- a/Stettin.mw
+++ b/Stettin.mw
@@ -15,6 +15,6 @@ t Veuroorlogse Stettin is mär veur n klein diel erestaureerd.
 == Uutgaonde verwiezing ==
 {{Commons|Szczecin}}
 
-{{Dialekt|sdz|Gällemuun|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Gällemuun|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Stad in Pooln]]
