*Empty MediaWiki Message*

--- a/Veekaoten.mw
+++ b/Veekaoten.mw
@@ -6,7 +6,7 @@ Töt 1937 a'j de gemeente ''Zalk en Veekaoten'', wööronder de dörpen [['s-Eer
 
 {{Coordinate|NS=52/32/00|EW=6/1/22|type=city|region=NL-OV}}
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Kampen]]
