*Empty MediaWiki Message*

--- a/Vlielaand.mw
+++ b/Vlielaand.mw
@@ -40,7 +40,7 @@ Hoewel Vlielaand now n [[Frieslaand|Fries]] [[Waddeneilaand]] is wordt der gien 
 ''Topografiese kaorte van Vlielaand. Klik op de kaorte veur n vergroting.''
 
 {{Frieslaand}}
-{{Dialekt|stl||Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Gemiente in Frieslaand]]
 [[Kategorie:Nederlaandse waddenailanden]]
