*Empty MediaWiki Message*

--- a/Wilsum.mw
+++ b/Wilsum.mw
@@ -20,7 +20,7 @@ Bi'j Wilsum e'j n paar nöstpaolen veur [[ooievaar]]s op-esteld die met wisselen
 
 {{Kampen}}
 {{Coordinate|NS=52/31/43|EW=5/57/55|type=city|region=NL-OV}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Kampen]]
