*Empty MediaWiki Message*

--- a/Woapen_van_Eanske.mw
+++ b/Woapen_van_Eanske.mw
@@ -24,7 +24,7 @@ De wegkomst van n slaghek he'w nög nich vönden. t Kän nen tolhek wean, moar t
 <references/>
 
 {{Navigoasie gemeantewöapen Oaweriessel}}
-{{Dialekt|twd|[[Eanske]]|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|twd|[[Eanske]]|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kattegerie:Tweants artikel]]
 [[Kattegerie:Woapen van Oaveriesselse gemeente]]
