*Empty MediaWiki Message*

--- a/Zuudeinde.mw
+++ b/Zuudeinde.mw
@@ -2,7 +2,7 @@
 
 {{Begin|sdz}}
 {{Kampen}}
-{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|sdz|Kampen|Algemene Nedersaksiese Schriefwieze}}
 {{Coordinate|NS=52/28/41|EW=5/55/51|type=city|region=NL-OV}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
