*Empty MediaWiki Message*

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -11,7 +11,7 @@ Et Wikipedia-projekt is begunnen op [[15 jannewaori]] [[2001]], mär bestun toe 
 * [[Nedersaksiese Wikipedia]]
 * [[Platduutse Wikipedia]]
 
-{{Dialekt|ovel|Attem|Algemene Nedersaksiese Skriefwieze}}
+{{Dialekt|ovel|Attem|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Wikipedie| ]]
 [[Kategorie:Organisaotie]]
