*Empty MediaWiki Message*

--- a/Bargen_op_Zoom.mw
+++ b/Bargen_op_Zoom.mw
@@ -2,7 +2,7 @@
 bestaandsnaam vlagge = Bergen_op_Zoom_vlag.svg|130px| 
 bestaandsnaam woapn = Bergen_op_Zoom_wapen.svg|130px|
 naam = Bargen op Zoom |
-lokatie = NL_-_locator_map_municipality_code_GM0748_(2016).png |
+lokatie = NL_-_locator_map_municipality_code_GM0748_(2016) |
 proveensie = [[Noord-Braobant|Noord-Bråbant]] |
 heufdplaats = [[Bargen op Zoom (stad)|Bargen op Zoom]] | 
 öppervlakte = 93,13 |
