*Empty MediaWiki Message*

--- a/Bolsward.mw
+++ b/Bolsward.mw
@@ -1,7 +1,7 @@
 {{Veurmaolige gemeente
 | naam = Bolsward
-| bestaandsnaam vlagge = VlaggeBolsward.gif
-| bestaandsnaam wapen = WaopenBolsward.gif
+| bestaandsnaam vlagge = Bolsward_flag.svg
+| bestaandsnaam wapen = Bolsward_wapen.svg
 | lokasie = LocatieBolsward
 | provinsie = [[Frieslaand]]
 | heufdplaotse = Bolsward
