*Empty MediaWiki Message*

--- a/Boornsterhem.mw
+++ b/Boornsterhem.mw
@@ -1,7 +1,7 @@
 {{Veurmaolige gemeente |
 naam = Boarnsterhim <br /> (Boornsterhem) |
-bestaandsnaam vlagge = Vlagge Boornsterhem.jpg |
-bestaandsnaam wapen = Waopen Boornsterhem.jpg |
+bestaandsnaam vlagge = Flag of Boarnsterhim.svg |
+bestaandsnaam wapen = Boornsterhem wapen.svg |
 lokasie = LocatieBoarnsterhim |
 provinsie = [[Frieslaand]] |
 heufdplaotse = [[Grouw]] | 
