*Empty MediaWiki Message*

--- a/Brielle.mw
+++ b/Brielle.mw
@@ -53,9 +53,9 @@ In [[1585]] wöd Brielle [[Engelaand (olde könninkriek)|Engels]] bezit: könnin
 
 == Galleri-je ==
 <gallery>
-Ofbeelding:Brielle-stadhoes.jpg|Stadhoes
+Ofbeelding:Brielle-34.JPG|Stadhoes
 Ofbeelding:Brielle-33.JPG|Winkelstraote
-Ofbeelding:Brielle-toorn.jpg|Karktoorn
+Ofbeelding:Catharijnekerk Brielle 01.jpg|Catharijnekarke
 </gallery>
 
 {{Zuud-Hollaand}}
